--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
   <head>
     <title>Modulo Visualizer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/reset-css@5.0.1/reset.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style type="text/css">
+
+      body {padding: 1em; font-size: 1.2em; font-family: monospace;}
+
+      h5 {margin-top: 2em;}
+
       svg text {
         font-family: sans-serif;
         text-anchor: middle;
@@ -15,21 +20,50 @@
       circle {cursor: pointer;}
 
       .highlight {
-        stroke: #833;
+        stroke: #fca;
+        stroke-width: 4;
       }
 
+      input {background-color: #555; color: white; width: 4em; text-align: right;}
+
     </style>
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </head>
   <body>
+    <h3>Modulo-Ring</h3>
     <div>
-      <div>N <input name="N" type="number" value="33"></div>
-      <div>m <input name="m" type="number" value="2"></div>
-      <div>f <input name="f" type="number" value="21"></div>
-
+      <div>N = <input name="N" type="number" value="55"></div>
     </div>
     <svg viewBox="-100 -100 200 200"></svg>
-    <button class="run">Run</button>
-    <button class="step">Step</button>
+    <p>
+      steps <input name="f" type="number" value="81">
+      <button class="run" onclick="run()">Run</button>
+      <button class="step" onclick="step()">Step</button>
+      <button class="reset" onclick="reset()">Reset</button>
+    </p>
+    <p>
+      <input name="m" type="number" value="2">
+      <sup class="steps">1</sup> 
+      = <span class="result"></span>
+    </p>
+    <div>
+      <h5>Auf dem Weg zu RSA</h5>
+      <p>
+        Beobachtung: Es gibt Werte für <dfn>steps</dfn> und <dfn>N</dfn>, für die gilt:
+      </p>
+      <p>m <sup>steps</sup> % N = m</p>
+      <p>
+        Zum Beispiel:
+        <br>N = 33, steps = 21 oder
+        <br>N = 55, steps = 81
+      </p>
+      <p>
+        Nach mehrfachem Multiplizieren landet man also wieder am Ausgangspunkt im Ring.
+      </p>
+    </div>
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
