--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
           </summary>
           <div class="detailcontent">
             Die Zahlen <dfn>d</dfn> und <dfn>N</dfn> sind in Wirklichkeit riesig (z.B. 2048 bits)!
-            Dadurch wird es fast unmöglich <dfn>d</dfn> oder <dfn>m</dfn> zu finden, obwohl man <dfn>c</dfn>, <dfn>d</dfn> und <dfn>N</dfn> kennt.
-            <br>Wenn man weiss, wie oft man multiplizieren muss (<dfn>d</dfn> ) kann mann das Verfahren deutlich abkürzen.
+            Dadurch wird es fast unmöglich <dfn>d</dfn> oder <dfn>m</dfn> zu finden, obwohl man <dfn>c</dfn>, <dfn>e</dfn> und <dfn>N</dfn> kennt.
             <br>Mit einem leistungsstarken Quantencomputer wird man dieses Verfahren jedoch knacken können!
           </div>
         </details>
@@ -112,7 +111,7 @@
             Hat das nun etwas mit Primzahlen zu tun?
           </summary>
           <div class="detailcontent">
-            Die Zahl <dfn>N</dfn> ist ein Produkt aud zwei Primzahlen p * q.
+            Die Zahl <dfn>N</dfn> ist ein Produkt aus zwei Primzahlen p * q.
             Wenn man diese Faktorenzerlegung kennt, kann man ein <dfn>e</dfn> wählen (oft 65537) und das passende <dfn>d</dfn> finden.
             Die Sicherheit von RSA beruht daher auf der Schwierigkeit eine riesige Zahl in Faktoren zu zerlegen.
           </div>
